--- a/Laboratorio2/css/style.css
+++ b/Laboratorio2/css/style.css
@@ -14,12 +14,25 @@ header, .main, footer{
     margin: auto;
 }
 
+.logotipo {
+    width: 90%;
+    max-width: 1000px;
+    margin: auto;
+}
+
 header nav{
-    background: #528FD5;
+    background-color: #528FD5;
+    padding: 8px 8px;
+    border-radius: 5px;
 }
 
 header nav ul{    
     list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 0;
+    margin-bottom: 0;
+    margin-top: 0;
 }
 
 header nav ul li {
@@ -29,26 +42,66 @@ header nav ul li {
 header nav ul li a {
     padding: 10px 20px;
     display: block;
-    color: #000;
+    color: #fff;
     text-decoration: none;
 }
 
 .main .articles {
-    width: 70%;
+    width: 68%;
     float: left;
     background: #fff;
+    box-sizing: border-box;
+    
+}
+
+.articles {
+    margin-top: 30px;
+    padding: 20px;
+    border: 1px solid gray;
+    box-shadow: 2px 2px 5px gray;
+}
+
+.articles h2 {
+    font-size: 18px;
+    text-transform: uppercase;
+    color: black;
+    padding: 5px;
+    font-family: "NunitoSans-Bold", Arial, Helvetica, sans-serif;
 }
 
 aside {
     width: 30%;
-    background: #ff8000;
+    /* background: #ff8000; */
+    background: rgba(255, 139, 61, 0.801);
     float: right;
     padding: 20px;
     box-sizing: border-box;
+
+    margin-top: 30px;
+    border: 1px solid gray;
+    box-shadow: 2px 2px 5px gray;
+}
+
+aside h3 {
+    font-size: 18px;
+    text-transform: uppercase;
+    color: white;
+    background-color: #528fd500;
+    text-align: center;
+    padding: 5px;
+    font-family: "NunitoSans-Bold", Arial, Helvetica, sans-serif;
+}
+
+.articles, aside {
+    margin-bottom: 15px;
 }
 
 footer {
     background: #000;
     color: #fff;
     clear: both;
+
+    padding: 15px 15px;
+    border-radius: 5px;
+    box-sizing: border-box;
 }
